# manager

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  REAMDE.md  docker-compose.yml
components/: time.cpp  time.h
config/: client_config.docker.json  client_config.json  server_config.docker.json  server_config.json
proto/: file.proto
src/client/: config.cpp  config.h  main.cpp  network.cpp  network.h
src/server/: config.cpp  config.h  database.cpp  database.h  main.cpp  manager.cpp  manager.h  session.cpp  session.h
